--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -7,8 +7,8 @@
                     <input type="text" matInput placeholder="search">
                 </mat-form-field>
                 <div class="ml-2">
-                    <mat-icon class="filter">filter_alt</mat-icon>
-                    <mat-icon class="filter">add_box</mat-icon>
+                    <mat-icon class="filter" (click)="filter()">filter_alt</mat-icon>
+                    <mat-icon class="filter" (click)="create()">add_box</mat-icon>
                 </div>
             </div>
         </div>
