--- a/src/app/layout/sigle-layout/sigle-layout.component.css
+++ b/src/app/layout/sigle-layout/sigle-layout.component.css
@@ -9,3 +9,15 @@ mat-drawer{
 mat-drawer-content{
     padding: 10px 20px !important;
 }
+mat-toolbar{
+    height: 70px !important;
+    background-color: #AB47BC;
+}
+span{
+    font-size: 20px !important;
+    color: #ffffff;
+    font-weight: 500;
+}
+.menu{
+    color: #ffffff !important;
+}
