--- a/src/app/pages/profile-card/profile-card.component.html
+++ b/src/app/pages/profile-card/profile-card.component.html
@@ -5,7 +5,7 @@
 <mat-grid-list cols="4" rowHeight="2:2" [gutterSize]="'10px'">
     <mat-grid-tile>
         <mat-card class="example-card" appearance="outlined">
-                <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+                <img mat-card-image [src]="Image" alt="image"/>
             <mat-card-content>
               {{longText}}
             </mat-card-content>
