--- a/src/app/layout/sidebar/sidebar.component.css
+++ b/src/app/layout/sidebar/sidebar.component.css
@@ -3,7 +3,10 @@ ul{
     margin: 0px !important;
 }
 .active{
-    background-color: #CE93D8 !important;
+    background-color: #ec9bf4;
+    box-shadow: 3px 3px 5px white;
+    transition: all 1s ease-in-out;
+    color: black;
 }
 a{
     display: flex;
