--- a/src/app/models/filter/filter.component.css
+++ b/src/app/models/filter/filter.component.css
@@ -8,7 +8,7 @@ h3{
     text-align: center;
     font-size: 24px !important;
     font-weight: 400;
-    color: #CE93D8 !important;
+    color: #009687e2 !important;
 }
 mat-dialog-actions{
     justify-content: center !important;
