--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding: 0rem 2rem !important;
 }
 .shadow{
-    box-shadow: 3px 5px 5px #CE93D8;
+    box-shadow: 3px 5px 5px #0096874b;
     border-radius: 50%;
 }
 .prl-1{
