--- a/src/app/pages/profile-card/profile-card.component.css
+++ b/src/app/pages/profile-card/profile-card.component.css
@@ -1,7 +1,7 @@
 h3{
     font-size: 24px !important;
     font-weight: 400;
-    color: #CE93D8 !important;
+    color: #009687e2 !important;
 }
 .example-card {
     max-width: 300px;
