--- a/src/app/pages/users/create/create.component.css
+++ b/src/app/pages/users/create/create.component.css
@@ -1,7 +1,7 @@
 h3{
     font-size: 24px !important;
     font-weight: 400;
-    color: #CE93D8 !important;
+    color: #009687e2 !important;
 }
 mat-form-field{
     width: 100%;
