profile card design

--- a/src/app/pages/profile-card/profile-card.component.html
+++ b/src/app/pages/profile-card/profile-card.component.html
@@ -4,51 +4,21 @@
 
 <mat-grid-list cols="4" rowHeight="2:2" [gutterSize]="'10px'">
     <mat-grid-tile>
-        <mat-card class="example-card" appearance="outlined">
-                <img mat-card-image [src]="Image" alt="image"/>
-            <mat-card-content>
-              {{longText}}
-            </mat-card-content>
-        </mat-card>
+      <app-card></app-card>
     </mat-grid-tile>
     <mat-grid-tile>
-        <mat-card class="example-card" appearance="outlined">
-                <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-            <mat-card-content>
-              {{longText}}
-            </mat-card-content>
-          </mat-card>
+       <app-card></app-card>
     </mat-grid-tile>
     <mat-grid-tile>
-        <mat-card class="example-card" appearance="outlined">
-                <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-            <mat-card-content>
-              {{longText}}
-            </mat-card-content>
-          </mat-card>
+      <app-card></app-card>
     </mat-grid-tile>
     <mat-grid-tile>
-        <mat-card class="example-card" appearance="outlined">
-                <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-            <mat-card-content>
-              {{longText}}
-            </mat-card-content>
-          </mat-card>
+      <app-card></app-card>
     </mat-grid-tile>
     <mat-grid-tile>
-        <mat-card class="example-card" appearance="outlined">
-                <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-            <mat-card-content>
-              {{longText}}
-            </mat-card-content>
-          </mat-card>
+      <app-card></app-card>
     </mat-grid-tile>
     <mat-grid-tile>
-        <mat-card class="example-card" appearance="outlined">
-                <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-            <mat-card-content>
-              {{longText}}
-            </mat-card-content>
-          </mat-card>
+      <app-card></app-card>
     </mat-grid-tile>
 </mat-grid-list>
