--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -17,4 +17,10 @@
             <span>Profile Card</span>
         </a>
     </li>
+    <li>
+        <a routerLink="/logout" routerLinkActive="active">
+            <mat-icon class="prl-1">logout</mat-icon>
+            <span>Logout</span>
+        </a>
+    </li>
 </ul>
