--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<h3>Welcome Back, My Friend</h3>
+<div>
+    <app-bar-chart></app-bar-chart>
+    <app-donughnut-chart></app-donughnut-chart>
+    <app-pie-chart></app-pie-chart>
+    <app-line-chart></app-line-chart>
+</div>
