--- a/src/app/pages/users/create/create.component.html
+++ b/src/app/pages/users/create/create.component.html
@@ -9,7 +9,7 @@
     </mat-grid-tile>
     <mat-grid-tile>
         <mat-form-field>
-            <mat-label>Favorite food</mat-label>
+            <mat-label>Favorite Fruit</mat-label>
             <mat-select>
                 @for (fruit of fruits; track fruit) {
                     <mat-option [value]="fruit">{{fruit}}</mat-option>
