--- a/src/app/components/bar-chart/bar-chart.component.html
+++ b/src/app/components/bar-chart/bar-chart.component.html
@@ -1,3 +1,6 @@
-<div class="chart-container">
-    <canvas  id="MyChart" >{{ chart }}</canvas>
-</div>
+<mat-card>
+    <h4>Bar Chart Design</h4>
+    <div class="chart-container" style="width: 80vw;">
+        <canvas  id="MyChart">{{ chart }}</canvas>
+    </div>
+</mat-card>
