--- a/src/app/components/line-chart/line-chart.component.html
+++ b/src/app/components/line-chart/line-chart.component.html
@@ -1,3 +1,6 @@
-<div class="chart-container">
-    <canvas  id="MyLine" >{{ chart }}</canvas>
-</div>
+<mat-card>
+    <h4>Line Chart Design</h4>
+    <div class="chart-container" style="width: 80vw;">
+        <canvas  id="MyLine" >{{ chart }}</canvas>
+    </div>
+</mat-card>
