--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,3 +1,3 @@
-<div class="chart-container">
+<div class="chart-container" style="position: relative; height:40vh; width:80vw">
     <canvas  id="MyPie" >{{ chart }}</canvas>
 </div>
