--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <li>
         <a routerLink="/users" routerLinkActive="active">
             <mat-icon class="prl-1">person</mat-icon>
-            <span>Users</span>
+            <span>User's FruitList</span>
         </a>
     </li>
     <li>
