--- a/src/app/components/bar-chart/bar-chart.component.html
+++ b/src/app/components/bar-chart/bar-chart.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <h4>Bar Chart Design</h4>
-    <div class="chart-container" style="width: 80vw;">
+    <div class="chart-container" style="width: 100%;height: 400px;">
         <canvas  id="MyChart">{{ chart }}</canvas>
     </div>
 </mat-card>
