--- a/src/app/components/line-chart/line-chart.component.html
+++ b/src/app/components/line-chart/line-chart.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <h4>Line Chart Design</h4>
-    <div class="chart-container" style="width: 80vw;">
+    <div class="chart-container" style="width: 100%;height: 400px;">
         <canvas  id="MyLine" >{{ chart }}</canvas>
     </div>
 </mat-card>
