--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -41,6 +41,14 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
         <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-icon class="edit" matTooltip="Edit" matTooltipPosition="below" (click)="edit()">edit</mat-icon>
+          <mat-icon class="delete" matTooltip="Delete" matTooltipPosition="below" (click)="delete()">delete</mat-icon>
+        </td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
