--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -6,7 +6,13 @@
         </a>
     </li>
     <li>
-        <a routerLink="/users" routerLinkActive="active">
+        <a routerLink="/user" routerLinkActive="active">
+            <mat-icon class="prl-1">person</mat-icon>
+            <span>Users</span>
+        </a>
+    </li>
+    <li>
+        <a routerLink="/users/fruit" routerLinkActive="active">
             <mat-icon class="prl-1">person</mat-icon>
             <span>User's FruitList</span>
         </a>
