--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,6 +1,6 @@
     <div>
         <div class="flex justify-between items-center h-50">
-            <h3 class="flex-1">Favourite Fruit'list</h3>
+            <h3 class="flex-1">Favourite Fruit Listing</h3>
             <div class="flex items-center row flex-2 flex-end">
                 <mat-form-field>
                     <mat-label>Search</mat-label>
