--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card" appearance="outlined">
     <mat-card-header>
         <div>
-            <img src="https://avatar.iran.liara.run/public/boy?username=[kyawkyaw]" alt="profile" class="profile">
+            <img src="images/boy.png" alt="profile" class="profile">
         </div>
     </mat-card-header>
     <mat-card-content>
